--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
 streamlit
 requests
-streamlit-audiorec
-SpeechRecognition
-pydub
-pyaudio
-pocketsphinx
-youtube-transcript-api>=0.6.0
-beautifulsoup4 
+youtube-transcript-api
+beautifulsoup4
 lxml
+gtts
+openai
